--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,25 @@
-Click==7.0
-Flask==1.0.2
-Flask-SQLAlchemy==2.3.2
-SQLAlchemy==1.3.3
-Markdown==3.1
-marshmallow==2.19.2
-marshmallow-sqlalchemy==0.16.3
-Werkzeug==0.15.2
-PyJWT==1.7.1
-flask_marshmallow==0.10.1
+click==8.1.3
+Flask==2.2.2
 flask-heroku==0.1.9
-gunicorn==19.9.0
-psycopg2==2.8.2
+flask-marshmallow==0.14.0
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.3
+gunicorn==20.1.0
+importlib-metadata==4.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Markdown==3.4.1
+MarkupSafe==2.1.1
+marshmallow==3.17.1
+marshmallow-sqlalchemy==0.28.1
+packaging==21.3
+psycopg2-binary==2.9.3
+PyJWT==2.4.0
+PyMySQL==1.0.2
+pyparsing==3.0.9
+six==1.16.0
+SQLAlchemy==1.4.41
+Werkzeug==2.2.2
+zipp==3.8.1
+flask_sqlalchemy
+jwt
